# temporal-ai-grocery-deals

./: .env.example  README.md  pyproject.toml
activities/: deal_finder_activities.py
helpers/: config_utils.py  host_utils.py  parsing_utils.py
pinecone/: preload_vector_data.py  search_groceries.py
scripts/: run_worker.py  run_workflow.py
shared/: config.py
vibe_references/: uv_deploy.txt  uv_project_documentation.txt
workflows/: deal_finder_workflow.py
