[project]
name = "temporal-ai-grocery-deals"
version = "0.1.0"
description = "Temporal AI Grocery Deals"
license = "MIT"
authors = [
  { name = "Steve Androulakis", email = "steve.androulakis@temporal.io" },
  { name = "Anthony Wong", email = "anthony.wong@temporal.io" },
  { name = "Nathan Glass", email = "nathan@temporal.io" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "temporalio>=1.8.0,<2.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "openai>=1.59.2,<2.0.0",
    "pinecone[asyncio]>=6.0.2,<7.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "googleapis-common-protos>=1.63.0,<2.0.0",
    "grpcio>=1.64.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3,<8.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/temporalio/samples-python/issues"
